--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 8080
 URI = mongodb://localhost:27017/we17305
-URL_DB = mongodb+srv://duclqmph28383:duclqmph28383@cluster0.uhzph4w.mongodb.net/
+URL_DB = mongodb://127.0.0.1:27017/be_ass_angular
