--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/datlt2306/web503#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^1.37.0",
         "concurrently": "^7.6.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
@@ -28,6 +29,8 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.3",
         "mongoose-paginate-v2": "^1.7.1",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "vite": "^4.1.4",
         "vite-plugin-node": "^3.0.2"
     }
