--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 8080
-URI = mongodb://localhost:27017/we17305
-URL_DB = mongodb://127.0.0.1:27017/be_ass_angular
+URL_DB = mongodb+srv://minhduc99badao:minhduc99badao@web208angular.xdxveae.mongodb.net/be_ass_angular
+# URL_DB = mongodb://127.0.0.1:27017/be_ass_angular
