--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "vite"
+    "start": "vite"
   },
   "repository": {
     "type": "git",
