--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "vite"
+    "start": "nodemon --experimental-specifier-resolution=node ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -29,12 +29,14 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "mongoose-paginate-v2": "^1.7.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^3.0.1",
     "vite": "^4.1.4",
     "vite-plugin-node": "^3.0.2"
   },
   "engines": {
-    "node": ">=14 <18"
+    "node": ">=14 <=18"
   }
 }
